# warp

./: .gitignore  .gitmodules  App.toml.template  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/workflows/: build-linux.yml  build-win.yml  docs-deploy.yml
docs/: index.md
docs/.vitepress/: config.mjs
docs/about-zcash/: index.md  usage.md
docs/coin_voting/: index.md  mindmap.md  user_stories.md
docs/tests/: accounts.md  areas.md  index.md
docs/tutorial/: account.md  conclusion.md  index.md  lwd.md  max.md  mine.md  multi_notes.md  pay_t.md  pay_ua.md  pay_z.md  payment_uri.md  prereq.md  shieldcoinbase.md  simple_tx.md  split.md  sync.md  warp.md  zcashd.md
docs/zkool/: accounts.md  index.md
warp-macros/: Cargo.toml
warp-macros/src/: lib.rs
