[workspace]
members = [
    "zcash-warp",
    "lwd-warp",
    "warp-macros"
]
exclude = [
    "librustzcash",
    "orchard"
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.77"
categories = ["cryptography::cryptocurrencies"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/zcash/librustzcash"

[workspace.dependencies]
thiserror = "1.0.63"
anyhow = "1.0.86"
figment = { version = "0.10.19", features = [ "env", "toml" ] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [ "env-filter" ] }
tokio = { version = "1.40", features = ["rt-multi-thread"] }
tokio-stream = "0.1.15"
tonic = { version = "0.12", features = ["tls", "tls-native-roots", "tls-webpki-roots"] }
tower = "0.4.13"
hyper = "1.4.1"
prost = "0.13"
hex = { version = "0.4", features = ["serde"] }
fpdec = "0.10.3"
r2d2 = "0.8.10"
r2d2_sqlite = "0.22.0"
lazy_static = "1.5"
parking_lot = "0.12.3"
rusqlite = { version = "0.29", features = [ "bundled-sqlcipher-vendored-openssl", "backup" ] }
flatbuffers = "24.3.25"
serde = "1.0.206"
serde_json = "1.0.124"
serde-hex = "0.1.0"
serde_cbor = "0.11.2"
serde_bytes = "0.11.15"
serde_with = "3.9.0"
bincode = "1.3.3"
rand = "0.8.4"
chrono = "0.4.38"
itertools = "0.13.0"
bip32 = "0.5.2"

clap = { version = "4.5.16", features = ["derive"] }
clap-repl = "0.3.0"
console = "0.15.8"

zcash_keys = { git = "https://github.com/hhanh00/librustzcash.git", rev = "ad6cf70a", features = ["sapling", "orchard", "test-dependencies"] }
zcash_protocol = { git = "https://github.com/hhanh00/librustzcash.git", rev = "ad6cf70a", features = ["local-consensus"] }
zcash_client_backend = { git = "https://github.com/hhanh00/librustzcash.git", rev = "ad6cf70a", features = [ "transparent-inputs", "orchard" ] }
zcash_primitives = { git = "https://github.com/hhanh00/librustzcash.git", rev = "ad6cf70a", features = [ "transparent-inputs" ] }
zcash_proofs = { git = "https://github.com/hhanh00/librustzcash.git", rev = "ad6cf70a" }
zcash_address = { git = "https://github.com/hhanh00/librustzcash.git", rev = "ad6cf70a" }
zcash_encoding = { git = "https://github.com/hhanh00/librustzcash.git",  rev = "ad6cf70a" }
zcash_note_encryption = "0.4"

[patch.crates-io]
orchard = { git = "https://github.com/hhanh00/orchard.git", rev = "b6a1e49" }
