[package]
name = "warp-macros"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = { version = "1.0.37", features = [ "proc-macro" ] }
syn = { version = "2.0.77", features = [ "full" ] }
